[package]
name = "search_bip39"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip32 = "0.4.0"
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.15"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
rayon = "1.7.0"
tiny-keccak = { version = "2.0.0", features = ["keccak", "sha3"] }

[[bin]]
name = "search_bip39"
path = "src/main.rs"
